Bugfix for wrong widths

--- a/packages/neos-ui/src/Containers/LeftSideBar/style.css
+++ b/packages/neos-ui/src/Containers/LeftSideBar/style.css
@@ -25,7 +25,7 @@
     transform: translateX(-var(--size-SidebarWidth));
 
     @media(max-width: 576px) {
-        transform: translateX(-540px);
+        transform: translateX(-576px);
     }
 }
 
@@ -64,7 +64,7 @@
         transform: translateX(var(--size-SidebarWidth));
 
         @media(max-width: 576px) {
-            transform: translateX(540px);
+            transform: translateX(576px);
         }
     }
 }
